OO-3286: make link of composite elements in "My curriculums" clickable, wording...